CRITICAL fix for Ubuntu deploy docs and config files.
Remove all comments from `supervisor-govready-q.conf ` because
trailing "# comments" cause line to be ignored. This caused a problem
in Ubuntu deployment documentation leading to a situation where
gunicorn was starting in wrong context and python packages not found.

Improved `settings.py` handling of deprecated `host` and `https`
parameters for setting `SITE_ROOT_URL` value.

--- a/local-examples/local-ubuntu-postgres-nginx-gunicorn-supervisor-http/supervisor-govready-q.conf
+++ b/local-examples/local-ubuntu-postgres-nginx-gunicorn-supervisor-http/supervisor-govready-q.conf
@@ -1,5 +1,5 @@
 [program:govready-q]
-# user = govready-q # uncomment if running as user govready-q
+user = govready-q
 command = gunicorn3 --config /home/govready-q/govready-q/local/gunicorn.conf.py siteapp.wsgi
 directory = /home/govready-q/govready-q
 stderr_logfile = /var/log/govready-q-stderr.log
