Fix #934 infinite redirects with SSL HTTPS & NGIX
Fixes two issues.

First, updates NGINX configuration files to pass $request_uri
port of URL from port 80 to port 443. Failing to pass $request_uri
tosses user (and non-users with invites) to home page rather than
requested url.

Second, and more signficantly, scheme `https` in `govready-url`
parameter was also setting `SECURE_SSL_REDIRECT` at the Django app
causing infinite redirects behind an NGINX reverse proxy that was
terminating the SSL connection and passing to local `http://localhost:8000`.
Fix was to let `SECURE_SSL_REDIRECT` remain its default `False` and
add new parameter `secure_ssl_redirect` for situations when deployment
called on Django to handle redirect.

--- a/local-examples/local-ubuntu-postgres-nginx-gunicorn-supervisor-http/nginx-govready-q-https.conf
+++ b/local-examples/local-ubuntu-postgres-nginx-gunicorn-supervisor-http/nginx-govready-q-https.conf
@@ -2,8 +2,7 @@
   server {
     # listen [::]:80;
     listen 80;
-    server_name example.com;
-    return 301 https://example.com;
+    return 302 https://$server_name:443$request_uri;
   }
 
   server {
