Use selected controls in ssp; UI improvements; simpler app version reference
**Model changes**

* Add controls.Element.select_controls_oscal_ctl_ids property
  to generate list of selected controls oscal_ctl_ids. Enable
  list of selected controls in SSP.

**UI changes**

* Simplify references to compliance app version;
  display compliance app version number from 'version' key
* Simplify display of title of project in UI
* Display additional information about the compliance app in
  the project settings modal
* Stop showing project page's grid of options once number
  of projects exceeds 4

**Compliance app changes**

* Improve data extraction in project page and store so only use
  the 'version' key to get version information.

--- a/guidedmodules/stubs/q-files/stub_app/app.yaml
+++ b/guidedmodules/stubs/q-files/stub_app/app.yaml
@@ -4,7 +4,7 @@ type: project
 version: 0.1.0
 icon: app.png
 catalog:
-  category: Draft
+  category: Preview
   vendor: GovReady
   vendor_url: ~
   status: stub
