--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
     - run: coverage run --source='.' --branch -p manage.py test discussion
     # Commenting out tests until better solution for testing after page loaded
     #- run: coverage run --source='.' --branch -p manage.py test siteapp.tests.LandingSiteFunctionalTests
-    #- run: coverage run --source='.' --branch -p manage.py test siteapp.tests.GeneralTests
+    - run: coverage run --source='.' --branch -p manage.py test siteapp.tests.GeneralTests
     #- run: coverage run --source='.' --branch -p manage.py test siteapp.tests.QuestionsTests
     - run: coverage combine
     - run: coverage report # output to studout.
