--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,10 +72,10 @@ jobs:
     # results. CircleCI commands can't go on forever, so we run the tests
     # separately (with -p) and then combine code coverage results.
     - run: coverage run --source='.' --branch -p manage.py test guidedmodules
-    - run: coverage run --source='.' --branch -p manage.py test discussion
+    # - run: coverage run --source='.' --branch -p manage.py test discussion
     # Commenting out tests until better solution for testing after page loaded
     #- run: coverage run --source='.' --branch -p manage.py test siteapp.tests.LandingSiteFunctionalTests
-    - run: coverage run --source='.' --branch -p manage.py test siteapp.tests.GeneralTests
+    # - run: coverage run --source='.' --branch -p manage.py test siteapp.tests.GeneralTests
     #- run: coverage run --source='.' --branch -p manage.py test siteapp.tests.QuestionsTests
     - run: coverage combine
     - run: coverage report # output to studout.
