pyinstrument being added and a packages updated

--- a/requirements.in
+++ b/requirements.in
@@ -32,6 +32,7 @@ jsonfield # MIT License
 dj_database_url # BSD License
 whitenoise # MIT License
 django-guardian # MIT License
+pyinstrument # BSD License
 
 # Python Packages Developed by GovReady and/or Josh
 rtyaml # CC0
