--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
     # but it still says chromium crashes when launched from selenium tests. Maybe because chromium
     # doesn't like to run as root --- need to try running it as non-root.
     ## Install selenium dependencies --- not needed if using circleci/python:3.5-jessie-browsers image.
-    - run: apt install chromedriver
+    - run: sudo apt install chromedriver
     - run: export DISPLAY=:99
     - run: export CHROMIUM_FLAGS="--disable-setuid-sandbox --no-sandbox"
     - run:
