--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,10 +41,10 @@ jobs:
     - run: sudo apt install chromedriver
     - run: export DISPLAY=:99
     - run: export CHROMIUM_FLAGS="--disable-setuid-sandbox --no-sandbox"
-    - run:
-        name: Running X virtual framebuffer
-        command: Xvfb :99 -screen 0 1280x1024x24
-        background: true
+#    - run:
+#        name: Running X virtual framebuffer
+#        command: Xvfb :99 -screen 0 1280x1024x24
+#        background: true
 
     # Run tests.
 
