Add --use-feature=2020-resolver to pip install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
             fetch-vendor-resources.sh lists other external software packages needed by the program.
             In both cases, package versions are pinned using version numbers and package hashes.
         command: |
-            pip install --user -r requirements.txt
-            pip install --user -r requirements_mysql.txt
+            pip install --user --use-feature=2020-resolver -r requirements.txt
+            pip install --user --use-feature=2020-resolver -r requirements_mysql.txt
             # pip install --user -r requirements_util.txt
             ./fetch-vendor-resources.sh
 
